Implemented get_available_courses.php and wired up to CourseRegistrationActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -68,6 +68,14 @@
             android:theme="@style/Theme.Phase3">
         </activity>
 
+        <!-- Student Home Activity -->
+        <activity
+            android:name=".CourseRegistrationActivity"
+            android:exported="true"
+            android:label="Course Registration"
+            android:theme="@style/Theme.Phase3">
+        </activity>
+
     </application>
 
 </manifest>
