Resolved conflicts after merging main into my branch.

--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Tue Apr 22 18:13:35 EDT 2025
-sdk.dir=C\:\\Users\\thtie\\AppData\\Local\\Android\\Sdk
+sdk.dir=/Users/nadia/Library/Android/sdk
