--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Apr 22 18:13:35 EDT 2025
-sdk.dir=/Users/nadia/Library/Android/sdk
+#Sat Apr 26 19:45:45 EDT 2025
+sdk.dir=C\:\\Users\\thtie\\AppData\\Local\\Android\\Sdk
