--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Sat Apr 26 19:45:45 EDT 2025
-sdk.dir=C\:\\Users\\thtie\\AppData\\Local\\Android\\Sdk
+sdk.dir=/Users/nadia/Library/Android/sdk
