Renamed studentRegister to CreateStudentAccountActivity. Added titles for instructor pages. Fixed error with View Taught Sections.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
 
         <!-- Student Register Activity - This is another screen -->
         <activity
-            android:name=".studentRegister"
+            android:name=".CreateStudentAccountActivity"
             android:exported="true"
             android:label="Student Register"
             android:theme="@style/Theme.Phase3">
